# Local-Dream-WebUI

./: .gitignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTEXT.md  DOLT_REMOTE.md  NOTICE  README.md  README_zh.md  app.py  manifest  package.json  pyproject.toml  ruff.toml  sse.py
.beads/: config.yaml  metadata.json
lib/: log.py
static/: app.js  params.js  sse-client.js
templates/: index.html
tests/: test_app.py  test_log.py  test_routes.py  test_sse.py
tests-js/: params-form.test.js  params-payload.test.js  sse-client.test.js
