[project]
name = "local-dream-webui"
version = "1.0.0"
description = "Flask web UI for the Local Dream Android app HTTP API"
requires-python = ">=3.10"
dependencies = ["flask", "requests", "pillow"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "performance: performance and benchmark tests (use `pytest -m 'not performance'` to skip)",
]

[tool.coverage.run]
source = ["app", "sse"]
omit = ["tests/*"]
